--- a/Kenya_stem_digital_efficacy.ipynb
+++ b/Kenya_stem_digital_efficacy.ipynb
@@ -14514,7 +14514,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 692
+          "height": 766
         },
         "id": "DtE7XSU8gTeY",
         "outputId": "6c97f5ee-7636-46a5-bb5b-44afa9844d40"
@@ -14548,10 +14548,68 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- A large majority of students (71 out of 99, or 71.7%) reported \"Yes - Active Individual Use\". This means that most students are not just passive observers—they are actively and individually using digital resources in their lessons.\n",
+        "- Group interactions account for 9 students (9.1%), indicating that some teachers encourage collaborative digital activities.\n",
+        "- Other/Unclear responses make up 8 students (8.1%), suggesting a small portion of responses were ambiguous or didn’t fit standard categories.\n",
+        "- No interaction was reported by 6 students (6.1%), showing that a minority of students are not allowed to interact with digital resources in any form.\n",
+        "- Rarely/Passive Observation was reported by 5 students (5.1%), meaning a few students only watch or observe rather than interact directly."
+      ],
+      "metadata": {
+        "id": "676zAklhkcsC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "QUESTION 5 : **How do you feel when your teacher uses digital resources in the lesson? (Probe for interest, or easy understanding)**"
+      ],
+      "metadata": {
+        "id": "AXFO2zOhkr8E"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "5NJsTsNqiP3l"
+        "id": "-rKcxzGDlQ8l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "QUESTION 5b : **Can you share an example of a digital resource that made the lesson exciting, enjoyable, or easier to understand? (Probe for Integrated science, mathematics,  pre-technical, and Agriculture, Physics, Biology or Chemistry)**"
+      ],
+      "metadata": {
+        "id": "tNr9bvSslGEs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LiZmM8hClRYc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "QUESTION 6: **Does your teacher give you assignments on the main idea learnt when using digital resources in a lesson? (If YES, explain how the assignment help you to recall the learnt idea)**"
+      ],
+      "metadata": {
+        "id": "xqfP5ffTlNjC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Mwh31B5IlR54"
       },
       "execution_count": null,
       "outputs": []
