--- a/Kenya_stem_digital_efficacy.ipynb
+++ b/Kenya_stem_digital_efficacy.ipynb
@@ -14571,12 +14571,113 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df['student_feeling_about_digital']"
+      ],
       "metadata": {
-        "id": "-rKcxzGDlQ8l"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 458
+        },
+        "id": "-rKcxzGDlQ8l",
+        "outputId": "e9ee9b2b-2667-4b03-aaa9-8d7314db02a0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 194,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     Feeling happy, better understanding of the con...\n",
+              "1     Excited, happy, learning interesting hence mor...\n",
+              "2     Lessons interesting. More and better understan...\n",
+              "3     Happy, enjoyable, interesting and makes it eas...\n",
+              "4     Motivated, lesson is lively, understand more,f...\n",
+              "                            ...                        \n",
+              "94                Good, get experience, more knowledge \n",
+              "95                         Great, we understand better \n",
+              "96    Happy- It enables me to know how to use the ta...\n",
+              "97                                          Interesting\n",
+              "98    We feel good because it makes us understand th...\n",
+              "Name: student_feeling_about_digital, Length: 99, dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>student_feeling_about_digital</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Feeling happy, better understanding of the con...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Excited, happy, learning interesting hence mor...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Lessons interesting. More and better understan...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Happy, enjoyable, interesting and makes it eas...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Motivated, lesson is lively, understand more,f...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>94</th>\n",
+              "      <td>Good, get experience, more knowledge</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>95</th>\n",
+              "      <td>Great, we understand better</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>96</th>\n",
+              "      <td>Happy- It enables me to know how to use the ta...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>97</th>\n",
+              "      <td>Interesting</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>98</th>\n",
+              "      <td>We feel good because it makes us understand th...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>99 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 194
+        }
+      ]
     },
     {
       "cell_type": "markdown",
